# FederatedLearning_Autoencoder_IDS

./: .gitignore  README.md  pyproject.toml  requirements.txt
.flwr/: config.toml
Dataset_Preparation/: README.md  split_in_splits.py  split_in_splits_sort.py  split_whole_dataset.py
ESP32_Model/main/: idf_component.yml  tree_model.h
Python_FL_Model/: README.md  pyproject.toml
Python_FL_Model/src/: client_app.py  dataset_load.py  server_app.py  task.py
TINYML/main/: CMakeLists.txt  TinyML_main.cpp  compare.txt  model.h  model_encoder.h  sdkconfig
TinyML_Conversion/: requirements.txt
src/: README.md  client_app.py  dataset_load.py  server_app.py  task.py
src/TINYML/: CMakeLists.txt
src/TINYML/main/: mcu_test_data.h  mcu_val_data.h
src/TinyML_Conversion/: converter_onnx.py  converter_tf_tflite.py  converter_tflite_c.py
